# impulse-script

./: .gitignore  Cargo.toml  PROJECT_STRUCTURE.md  README.md  config.ini
.github/instructions/: RustC.instructions.md
.github/workflows/: windows-build-release.yml
src/: main.rs
src/modules/: input_method_gfck.rs  input_method_ghub.rs  keybinds.rs  mod.rs  mouse_command.rs  mouse_input.rs  recoil.rs  support.rs  xmod_state.rs
src/modules/config/: mod.rs  settings_io.rs  setup_class.rs  weapon_data.rs
src/modules/core/: control.rs  dll_injector.rs  hotkey_handler.rs  logger.rs  manual_mapper.rs  mod.rs  process_ghost.rs  process_stealth.rs
src/modules/handlers/: ads_calc.rs  buttons.rs  calculator.rs  config.ini  control.rs  mod.rs  settings.rs  settings_converter.rs  settings_io.rs  setup_class.rs
src/modules/input/: gfck.rs  ghub.rs  mod.rs  mouse_input.rs
src/modules/ui/: keybinds.rs  mod.rs  support.rs
