[package]
name = "rust-macro"
version = "0.1.0"
edition = "2024"

[dependencies]
imgui = "0.12"
imgui-winit-support = "0.13"
libloading = "0.8.8"
glium = { version = "0.35.0", default-features = true }
imgui-glium-renderer = "0.13.0"
dirs = "6.0.0"
glob = "0.3.2"
ini = "1.3.0"
serde_json = "1.0.140"
configparser = "3.1.0"

[dependencies.winapi]
version = "0.3"
features = [
    "windef",
    "minwindef", 
    "winuser",
    "processthreadsapi",
    "handleapi",
    "tlhelp32",
    "winnt",
    "wincon",
    "memoryapi",
    "libloaderapi",
    "consoleapi",
    "synchapi",
    "errhandlingapi",
    "wow64apiset"
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
